# rustiboa-snt

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  REFERENCES.md  ROADMAP.md
.cargo/: config.toml
refs/: TESTING.md
src/: main.rs
src/cartridge/: mod.rs
src/cpu/: instructions.rs  mod.rs  opcodes.rs  registers.rs
src/display/: mod.rs
src/input/: mod.rs
src/interrupts/: mod.rs
src/mmu/: mod.rs
src/ppu/: mod.rs
src/timer/: mod.rs
